k8s-manifest-diplom/k8s-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: diplom-mysite-service
spec:
  type: ClusterIP
  selector:
    app: diplom-mysite
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
