k8s-manifest-diplom/k8s-ingress-cert.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diplom-mysite-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - web.hitmouz.com
    secretName: web-hitmouz-com-tls
  rules:
  - host: web.hitmouz.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: diplom-mysite-service
            port:
              number: 80
