k8s-manifest-diplom/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diplom-mysite-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: web.hitmouz.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: diplom-mysite-service
            port:
              number: 80
